test: covert terminate/activate pairs to move instructions